// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/calculations/Options should match snapshot 1`] = `
<div>
  <div
    class="CalculationOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
          Select is focused , press Down to open the menu, 
      </span>
    </span>
    <div
      class=" css-1s59geg-Control"
    >
      <div
        class=" css-1mxrbau-ValueContainer"
      >
        <div
          class=" css-1brck82-singleValue"
        >
          Calculate
        </div>
        <input
          aria-autocomplete="list"
          class="css-wmatm6-dummyInput-DummyInput"
          id="react-select-2-input"
          readonly=""
          tabindex="0"
          value=""
        />
      </div>
      <div
        class=" css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class=" css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class=" css-1f9iddu-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="none"
    />
  </div>
</div>
`;

exports[`components/calculations/Options should match snapshot menu open 1`] = `
<div>
  <div
    class="CalculationOptions css-2b097c-container"
  >
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
         10 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class=" css-1s59geg-Control"
    >
      <div
        class=" css-1mxrbau-ValueContainer"
      >
        <div
          class=" css-1brck82-singleValue"
        >
          Calculate
        </div>
        <input
          aria-autocomplete="list"
          class="css-wmatm6-dummyInput-DummyInput"
          id="react-select-3-input"
          readonly=""
          tabindex="0"
          value=""
        />
      </div>
      <div
        class=" css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class=" css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class=" css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class=" css-1f9iddu-indicatorContainer"
        >
          <i
            class="CompassIcon icon-chevron-up ChevronUpIcon"
          />
        </div>
      </div>
    </div>
    <div
      class=" css-1kslk4z-menu"
    >
      <div
        class=" css-g29tl0-MenuList"
      >
        <div
          class=" css-1cnkr6z-option"
          id="react-select-3-option-0"
          tabindex="-1"
        >
          None
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-1"
          tabindex="-1"
        >
          Count
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-2"
          tabindex="-1"
        >
          Count Value
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-3"
          tabindex="-1"
        >
          Count Unique Values
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-4"
          tabindex="-1"
        >
          Sum
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-5"
          tabindex="-1"
        >
          Average
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-6"
          tabindex="-1"
        >
          Median
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-7"
          tabindex="-1"
        >
          Min
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-8"
          tabindex="-1"
        >
          Max
        </div>
        <div
          class=" css-14xsrqy-option"
          id="react-select-3-option-9"
          tabindex="-1"
        >
          Range
        </div>
      </div>
    </div>
    <input
      name="calculation_options"
      type="hidden"
      value="none"
    />
  </div>
</div>
`;
